--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>RNG</title>
     </head>
     <ul>
-        <li><a href="home.asp"><h1>RNG</h1></a></li>
+        <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
     </ul>
     <body>
         <section class="flex-me">
@@ -22,19 +22,19 @@
         <h2>Choose Your Adventure!</h2>
         <section class="flex-games">
             <div>
-                <img src="images/undertale-icon.png" alt="undertale icon">
+                <a href="page01.html"><img src="images/undertale-icon.png" alt="undertale icon"></a>
                 <h3>Undertale</h3>
             </div>
             <div>
-                <img src="images/nitw-icon.png" alt="nitw icon">
+                <a href="page02.html"><img src="images/nitw-icon.png" alt="nitw icon"></a>
                 <h3>Night in The Woods</h3>
             </div>
             <div>
-                <img src="images/stardew-icon.png" alt="stardew icon">
+                <a href="page03.html"><img src="images/stardew-icon.png" alt="stardew icon"></a>
                 <h3>Stardew Valley</h3>
             </div>
             <div>
-                <img src="images/spiritfarer-icon.png" alt="spiritfarer icon">
+                <a href="page04.html"><img src="images/spiritfarer-icon.png" alt="spiritfarer icon"></a>
                 <h3>Spiritfarer</h3>
             </div>
         </section>
