--- a/page01.html
+++ b/page01.html
@@ -8,12 +8,39 @@
     <title>Document</title>
 </head>
 <ul>
-    <li><a href="RNG.asp">RNG</a></li>
-    <li><a href="nightinthewoods.asp">Night in The Woods</a></li>
-    <li><a href="stardewvalley.asp">Stardew Valley</a></li>
-    <li><a href="Spiritfarer.asp">Spiritfarer</a></li>
+    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+    <li><a href="page02.html">Night in The Woods</a></li>
+    <li><a href="page03.html">Stardew Valley</a></li>
+    <li><a href="page04.html">Spiritfarer</a></li>
   </ul>
 <body>
-    
+  <section class="flex-article">
+    <div class="left">
+    <h1>Undertale</h1>
+    <h4>The Game Where You Don't Need to Fight</h4>
+    <article>Game Synopsis:
+      Long ago, in the year of 201X, two races ruled over the earth: Humans and Monsters. However, a terrible war broke out between the two races, and after a long battle the humans were victorious. The monsters were forced to retreat into the Underground of Mount Ebott, and the humans sealed them within the Underground with a magical barrier. Many years later, legends say that humans who climb Mount Ebott never return. 
+      <div>
+      </div>
+      Gameplay:
+      The player plays as a human child who has fallen into the Underground. As they venture into the unknown world in search of a way back to the surface, the player meets various monsters, many of which engage the player in a fight. The combat system involves the player navigating through mini-bullet hell attacks by the opponent, and fighting style differs depending on what character engages in a fight with you. However, the player has the option to pacify and spare the monsters or kill them instead. Whatever path you choose will greatly affect the player’s progression in the game; and it may change the dialogue, characters, and story based on outcomes. This game may as well be a reflection on your soul.</article>
+    </div>
+    <div class="right">
+      <img src="images/undertale-ss1.png" alt="undertale screenshot 1">
+      <img src="images/undertale-ss2.png" alt="undertale screenshot 2">
+    </div>
+  </section>
+  <h2>Play the Game!</h2>
+  <section class="button-box">
+    <div>
+     <img src="images/switch-button.png" alt="switch-button">
+    </div>
+    <div>
+      <img src="images/pc-button.png" alt="pc-button">
+    </div>
+    <div>
+      <img src="images/console-button.png" alt="console-button">
+    </div>
+  </section>
 </body>
 </html>
