--- a/page03.html
+++ b/page03.html
@@ -8,12 +8,45 @@
     <title>Document</title>
 </head>
 <ul>
-    <li><a href="RNG.asp">RNG</a></li>
-    <li><a href="undertale.asp">Undertale</a></li>
-    <li><a href="nightinthewoods.asp">Night in the Woods</a></li>
-    <li><a href="spiritfarer.asp">Spiritfarer</a></li>
+    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+    <li><a href="page01.html">Undertale</a></li>
+    <li><a href="page02.html">Night in the Woods</a></li>
+    <li><a href="page04.html">Spiritfarer</a></li>
   </ul>
 <body>
-    
+  <section class="flex-article">
+    <div class="left">
+    <h1>Stardew Valley</h1>
+    <h4>All Your Cottagecore Needs in One Game</h4>
+    <article>
+      Game Synopsis:
+      You’ve inherited your grandfather’s old farm plot in Stardew Valley. Armed with hand-me-down tools and a few coins, you set out to begin your new life. Can you learn to live off the land and turn these overgrown fields into a thriving home? It won’t be easy. Ever since Joja Corporation came to town, the old ways of life have all but disappeared. The community center, once the town’s most vibrant hub of activity, now lies in shambles. But the valley seems full of opportunity. With a little dedication, you might just be the one to restore Stardew Valley to greatness!
+      (https://www.stardewvalley.net/about/)
+      <div>
+      </div>
+      Gameplay:
+      Stardew Valley is a game centered on farming: farming in the literal agricultural sense, farming for materials, farming for collectibles, even farming for love. You play as an office worker who abandons the city for emotional healing through tending to their deceased grandfather’s farm. Along the way, you get to meet and interact with different characters, explore dungeons and hidden regions of town, and earn different collectibles, all while being able to customize your farm and cabin to your liking. And who knows? You could even settle down and have kids in Stardew Valley.
+      (https://medium.com/game-design-fundamentals/a-critical-play-of-stardew-valley-c7ec30ef507)
+      </article>
+    </div>
+    <div class="right">
+      <img src="images/stardew-ss1.png" alt="stardew screenshot 1">
+      <img src="images/stardew-ss2.png" alt="stardew screenshot 2">
+    </div>
+  </section> 
+  <section class="button-box">
+    <div>
+     <img src="images/switch-button.png" alt="switch-button">
+    </div>
+    <div>
+      <img src="images/pc-button.png" alt="pc-button">
+    </div>
+    <div>
+      <img src="images/console-button.png" alt="console-button">
+    </div>
+    <div>
+      <img src="images/mobile-button.png" alt="mobile-button">
+    </div>
+  </section>
 </body>
 </html>
