--- a/page04.html
+++ b/page04.html
@@ -8,12 +8,43 @@
     <title>Document</title>
 </head>
 <ul>
-    <li><a href="RNG.asp">RNG</a></li>
-    <li><a href="undertale.asp">Undertale</a></li>
-    <li><a href="nightinthewoods.asp">Night in the Woods</a></li>
-    <li><a href="stardewvalley.asp">Stardew Valley</a></li>
+    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+    <li><a href="page01.html">Undertale</a></li>
+    <li><a href="page02.html">Night in the Woods</a></li>
+    <li><a href="page03.html">Stardew Valley</a></li>
   </ul>
 <body>
-    
+  <section class="flex-article">
+    <div class="left">
+    <h1>Spiritfarer</h1>
+    <h4>It's time, Take me to The Gate Stella</h4>
+    <article>Game Synopsis:
+      With the new role as the Spiritfarer and the power of the Everlight, Stella and her kitty companion Daffodil must fulfill the task of bringing lost souls to the afterlife. As she welcomes new spirits aboard her ship, she earnestly helps them in fulfilling their last wishes before bringing them to the Omega Gate, the gateway to the afterlife. While every goodbye is bittersweet, the life they may carry on flourishes joyously. 
+      <div>
+      </div>
+      Gameplay:
+      Spiritfarer is a gorgeous game that’s filled with deep and unexpected emotions. You play as Stella, a ship captain that ferries people onwards to the afterlife. While it may sound morbid the game is actually very sweet and just a delight to play. Throughout the you take these delightful anamorphic animals on board your ship and fulfill their little requests. But if you spend the time to talk to them you begin to hear little tidbits of their life beforehand. You hear about their happiest moments, their memories and their regrets.
+      (https://www.unpause.asia/2021/12/spiritfarer-all-the-spirits-heartbreaking-stories/)
+      </article>
+    </div>
+    <div class="right">
+      <img src="images/spiritfarer-ss1.png" alt="spiritfarer screenshot 1">
+      <img src="images/spiritfarer-ss2.png" alt="spiritfarer screenshot 2">
+    </div>
+  </section> 
+  <section class="button-box">
+    <div>
+     <img src="images/switch-button.png" alt="switch-button">
+    </div>
+    <div>
+      <img src="images/pc-button.png" alt="pc-button">
+    </div>
+    <div>
+      <img src="images/console-button.png" alt="console-button">
+    </div>
+    <div>
+      <img src="images/mobile-button.png" alt="mobile-button">
+    </div>
+  </section>
 </body>
 </html>
