--- a/page03.html
+++ b/page03.html
@@ -34,6 +34,7 @@
       <img src="images/stardew-ss2.png" alt="stardew screenshot 2">
     </div>
   </section> 
+  <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
      <img src="images/switch-button.png" alt="switch-button">
