--- a/page01.html
+++ b/page01.html
@@ -30,6 +30,7 @@
       <img src="images/undertale-ss2.png" alt="undertale screenshot 2">
     </div>
   </section>
+  <div></div>
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
