--- a/page02.html
+++ b/page02.html
@@ -33,6 +33,7 @@
       <img src="images/nitw-ss2.png" alt="nitw screenshot 2">
     </div>
   </section>
+  <div></div>
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
