--- a/page04.html
+++ b/page04.html
@@ -32,6 +32,7 @@
       <img src="images/spiritfarer-ss2.png" alt="spiritfarer screenshot 2">
     </div>
   </section> 
+  <div></div>
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
