--- a/page01.html
+++ b/page01.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="meyer-reset.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
 </head>
-<ul>
-    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
-    <li><a href="page02.html">Night in The Woods</a></li>
-    <li><a href="page03.html">Stardew Valley</a></li>
-    <li><a href="page04.html">Spiritfarer</a></li>
-  </ul>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+      <li><a href="page02.html">Night in The Woods</a></li>
+      <li><a href="page03.html">Stardew Valley</a></li>
+      <li><a href="page04.html">Spiritfarer</a></li>
+    </ul>
+  </nav>
   <section class="flex-article">
     <div class="left">
+  
     <h1>Undertale</h1>
     <h4>The Game Where You Don't Need to Fight</h4>
     <article>Game Synopsis:
@@ -34,13 +38,19 @@
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
-     <img src="images/switch-button.png" alt="switch-button">
+      <a href="https://www.nintendo.com/store/products/undertale-switch/" target="_blank">
+        <img src="images/switch-button.png" alt="switch-button">
+      </a>
     </div>
     <div>
-      <img src="images/pc-button.png" alt="pc-button">
+      <a href="https://store.steampowered.com/app/391540/Undertale/" target="_blank">
+        <img src="images/pc-button.png" alt="pc-button">
+      </a>
     </div>
     <div>
+      <a href="https://undertale.com" target="_blank">
       <img src="images/console-button.png" alt="console-button">
+      </a>
     </div>
   </section>
 </body>
