--- a/page04.html
+++ b/page04.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="meyer-reset.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
 </head>
-<ul>
-    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
-    <li><a href="page01.html">Undertale</a></li>
-    <li><a href="page02.html">Night in the Woods</a></li>
-    <li><a href="page03.html">Stardew Valley</a></li>
-  </ul>
 <body>
+  <na>
+    <ul>
+      <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+      <li><a href="page01.html">Undertale</a></li>
+      <li><a href="page02.html">Night in the Woods</a></li>
+      <li><a href="page03.html">Stardew Valley</a></li>
+    </ul>
+  </na>
   <section class="flex-article">
     <div class="left">
     <h1>Spiritfarer</h1>
@@ -36,16 +39,19 @@
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
-     <img src="images/switch-button.png" alt="switch-button">
+      <a href="https://www.nintendo.com/store/products/spiritfarer-switch/" target="_blank">
+        <img src="images/switch-button.png" alt="switch-button">
+        </a>
     </div>
     <div>
-      <img src="images/pc-button.png" alt="pc-button">
+      <a href="https://store.steampowered.com/app/972660/Spiritfarer_Farewell_Edition/" target="_blank">
+        <img src="images/pc-button.png" alt="pc-button">
+        </a>
     </div>
     <div>
-      <img src="images/console-button.png" alt="console-button">
-    </div>
-    <div>
-      <img src="images/mobile-button.png" alt="mobile-button">
+      <a href="https://www.xbox.com/en-us/games/store/spiritfarer-farewell-edition/9ng5l58fd3x5" target="_blank">
+        <img src="images/console-button.png" alt="console-button">
+        </a>
     </div>
   </section>
 </body>
