--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="meyer-reset.css"/>
         <link rel="stylesheet" href="style.css"/>
         <title>RNG</title>
     </head>
-    <ul>
-        <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
-    </ul>
     <body>
+        <nav>
+        <ul>
+            <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+        </ul>
+        </nav>
         <section class="flex-me">
             <div class="left">
                 <img src="images/primary-logo.png" alt="primary logo">
