--- a/page02.html
+++ b/page02.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="meyer-reset.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
 </head>
-<ul>
-    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
-    <li><a href="page01.html">Undertale</a></li>
-    <li><a href="page03.html">Stardew Valley</a></li>
-    <li><a href="page04.html">Spiritfarer</a></li>
-  </ul>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+      <li><a href="page01.html">Undertale</a></li>
+      <li><a href="page03.html">Stardew Valley</a></li>
+      <li><a href="page04.html">Spiritfarer</a></li>
+    </ul>
+  </nav>
   <section class="flex-article">
     <div class="left">
     <h1>Night in The Woods</h1>
     <h4>At the End of Everything, Hold onto Anything</h4>
     <article>Game Synopsis:
-      Game Synopsis:
       College dropout Mae Borowski returns home to the crumbling former mining town of Possum Springs seeking to resume her aimless former life and reconnect with the friends she left behind. But things aren't the same. Home seems different now and her friends have grown and changed. Leaves are falling and the wind is growing colder. Strange things are happening as the light fades. And there's something in the woods.
       (http://www.nightinthewoods.com) 
       <div>
@@ -37,16 +39,19 @@
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
-     <img src="images/switch-button.png" alt="switch-button">
+      <a href="https://www.nintendo.com/store/products/night-in-the-woods-switch/" target="_blank">
+      <img src="images/switch-button.png" alt="switch-button">
+      </a>
     </div>
     <div>
+      <a href="https://store.steampowered.com/app/481510/Night_in_the_Woods/" target="_blank">
       <img src="images/pc-button.png" alt="pc-button">
+      </a>
     </div>
     <div>
-      <img src="images/console-button.png" alt="console-button">
-    </div>
-    <div>
+      <a href="https://apps.apple.com/us/app/night-in-the-woods/id1251742577" target="_blank">
       <img src="images/mobile-button.png" alt="mobile-button">
+      </a>
     </div>
   </section>
 </body>
