--- a/page03.html
+++ b/page03.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="meyer-reset.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
 </head>
-<ul>
-    <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
-    <li><a href="page01.html">Undertale</a></li>
-    <li><a href="page02.html">Night in the Woods</a></li>
-    <li><a href="page04.html">Spiritfarer</a></li>
-  </ul>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
+      <li><a href="page01.html">Undertale</a></li>
+      <li><a href="page02.html">Night in the Woods</a></li>
+      <li><a href="page04.html">Spiritfarer</a></li>
+    </ul>
+  </nav>
   <section class="flex-article">
     <div class="left">
     <h1>Stardew Valley</h1>
@@ -38,16 +41,24 @@
   <h2>Play the Game!</h2>
   <section class="button-box">
     <div>
-     <img src="images/switch-button.png" alt="switch-button">
+      <a href="https://www.nintendo.com/store/products/stardew-valley-switch/" target="_blank">
+      <img src="images/switch-button.png" alt="switch-button">
+      </a>
     </div>
     <div>
+      <a href="https://store.steampowered.com/app/413150/Stardew_Valley/" target="_blank">
       <img src="images/pc-button.png" alt="pc-button">
+      </a>
     </div>
     <div>
+      <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm" target="_blank">
       <img src="images/console-button.png" alt="console-button">
+      </a>
     </div>
     <div>
+      <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm" target="_blank">
       <img src="images/mobile-button.png" alt="mobile-button">
+      </a>
     </div>
   </section>
 </body>
