--- a/page04.html
+++ b/page04.html
@@ -9,14 +9,14 @@
     <title>Document</title>
 </head>
 <body>
-  <na>
+  <nav>
     <ul>
       <li><a href="index.html"><img src="images/secondary-logo.png" alt="navbar home link"></a></li>
       <li><a href="page01.html">Undertale</a></li>
       <li><a href="page02.html">Night in the Woods</a></li>
       <li><a href="page03.html">Stardew Valley</a></li>
     </ul>
-  </na>
+  </nav>
   <section class="flex-article">
     <div class="left">
     <h1>Spiritfarer</h1>
