--- a/page01.html
+++ b/page01.html
@@ -45,17 +45,17 @@
     <section class="button-box">
       <div>
         <a href="https://www.nintendo.com/store/products/undertale-switch/" target="_blank">
-          <img src="images/switch-button.png" alt="switch-button" />
+          <img src="images/switch-btn-on.svg" alt="switch-button-on" />
         </a>
       </div>
       <div>
         <a href="https://store.steampowered.com/app/391540/Undertale/" target="_blank">
-          <img src="images/pc-button.png" alt="pc-button" />
+          <img src="images/pc-btn-on.svg" alt="pc-button-on" />
         </a>
       </div>
       <div>
         <a href="https://undertale.com" target="_blank">
-          <img src="images/console-button.png" alt="console-button" />
+          <img src="images/console-btn-on.svg" alt="console-button-on" />
         </a>
       </div>
     </section>
