--- a/page02.html
+++ b/page02.html
@@ -43,17 +43,17 @@
     <section class="button-box">
       <div>
         <a href="https://www.nintendo.com/store/products/night-in-the-woods-switch/" target="_blank">
-          <img src="images/switch-button.png" alt="switch-button" />
+          <img src="images/switch-btn-on.svg" alt="switch-button-on" />
         </a>
       </div>
       <div>
         <a href="https://store.steampowered.com/app/481510/Night_in_the_Woods/" target="_blank">
-          <img src="images/pc-button.png" alt="pc-button" />
+          <img src="images/pc-btn-on.svg" alt="pc-button-on" />
         </a>
       </div>
       <div>
         <a href="https://apps.apple.com/us/app/night-in-the-woods/id1251742577" target="_blank">
-          <img src="images/mobile-button.png" alt="mobile-button" />
+          <img src="images/mobile-btn-on.svg" alt="mobile-button-on" />
         </a>
       </div>
     </section>
