--- a/page03.html
+++ b/page03.html
@@ -42,7 +42,7 @@
   <section class="button-box">
     <div>
       <a href="https://www.nintendo.com/store/products/stardew-valley-switch/" target="_blank">
-      <img src="images/switch-button.png" alt="switch-button">
+        <img src="images/switch-btn-on.svg" alt="switch-button-on" />
       </a>
     </div>
     <div>
