--- a/page04.html
+++ b/page04.html
@@ -42,17 +42,17 @@
   <section class="button-box">
     <div>
       <a href="https://www.nintendo.com/store/products/spiritfarer-switch/" target="_blank">
-        <img src="images/switch-button.png" alt="switch-button">
+        <img src="images/switch-btn-on.svg" alt="switch-button">
         </a>
     </div>
     <div>
       <a href="https://store.steampowered.com/app/972660/Spiritfarer_Farewell_Edition/" target="_blank">
-        <img src="images/pc-button.png" alt="pc-button">
+        <img src="images/pc-btn-on.svg" alt="pc-button">
         </a>
     </div>
     <div>
       <a href="https://www.xbox.com/en-us/games/store/spiritfarer-farewell-edition/9ng5l58fd3x5" target="_blank">
-        <img src="images/console-button.png" alt="console-button">
+        <img src="images/console-btn-on.svg" alt="console-button">
         </a>
     </div>
   </section>
