--- a/page03.html
+++ b/page03.html
@@ -47,17 +47,17 @@
     </div>
     <div>
       <a href="https://store.steampowered.com/app/413150/Stardew_Valley/" target="_blank">
-      <img src="images/pc-button.png" alt="pc-button">
+      <img src="images/pc-btn-on.svg" alt="pc-button">
       </a>
     </div>
     <div>
       <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm" target="_blank">
-      <img src="images/console-button.png" alt="console-button">
+      <img src="images/console-btn-on.svg" alt="console-button">
       </a>
     </div>
     <div>
       <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm" target="_blank">
-      <img src="images/mobile-button.png" alt="mobile-button">
+      <img src="images/mobile-btn-on.svg" alt="mobile-button">
       </a>
     </div>
   </section>
