--- a/page02.html
+++ b/page02.html
@@ -43,12 +43,12 @@
     <section class="button-box">
       <div>
         <a href="https://www.nintendo.com/store/products/night-in-the-woods-switch/" target="_blank">
-          <img src="images/switch-btn-on.svg" alt="switch-button-on" />
+          <img src="images/switch-btn-off.svg" alt="switch-button-on" />
         </a>
       </div>
       <div>
         <a href="https://store.steampowered.com/app/481510/Night_in_the_Woods/" target="_blank">
-          <img src="images/pc-btn-on.svg" alt="pc-button-on" />
+          <img src="images/pc-btn-off.svg" alt="pc-button-on" />
         </a>
       </div>
       <div>
