--- a/page03.html
+++ b/page03.html
@@ -42,22 +42,22 @@
   <section class="button-box">
     <div>
       <a href="https://www.nintendo.com/store/products/stardew-valley-switch/" target="_blank">
-        <img src="images/switch-btn-on.svg" alt="switch-button-on" />
+        <img src="images/switch-btn-off.svg" alt="switch-button-on" />
       </a>
     </div>
     <div>
       <a href="https://store.steampowered.com/app/413150/Stardew_Valley/" target="_blank">
-      <img src="images/pc-btn-on.svg" alt="pc-button">
+      <img src="images/pc-btn-off.svg" alt="pc-button">
       </a>
     </div>
     <div>
       <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm" target="_blank">
-      <img src="images/console-btn-on.svg" alt="console-button">
+      <img src="images/console-btn-off.svg" alt="console-button">
       </a>
     </div>
     <div>
       <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm" target="_blank">
-      <img src="images/mobile-btn-on.svg" alt="mobile-button">
+      <img src="images/mobile-btn-off.svg" alt="mobile-button">
       </a>
     </div>
   </section>
