--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <h2>Choose Your Adventure!</h2>
     <section class="flex-games">
       <div>
-        <a href="page01.html"><img src="images/undertale-icon.png" alt="undertale icon" /></a>
+        <a href="page01.html"><img class="hover-img" src="images/undertale-icon.png" alt="undertale icon" /></a>
         <h3>Undertale</h3>
       </div>
       <div>
-        <a href="page02.html"><img src="images/nitw-icon.png" alt="nitw icon" /></a>
+        <a href="page02.html"><img class="hover-img" src="images/nitw-icon.png" alt="nitw icon" /></a>
         <h3>Night in The Woods</h3>
       </div>
       <div>
-        <a href="page03.html"><img src="images/stardew-icon.png" alt="stardew icon" /></a>
+        <a href="page03.html"><img class="hover-img" src="images/stardew-icon.png" alt="stardew icon" /></a>
         <h3>Stardew Valley</h3>
       </div>
       <div>
-        <a href="page04.html"><img src="images/spiritfarer-icon.png" alt="spiritfarer icon" /></a>
+        <a href="page04.html"><img class="hover-img" src="images/spiritfarer-icon.png" alt="spiritfarer icon" /></a>
         <h3>Spiritfarer</h3>
       </div>
     </section>
